--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "build-staging": "yarn build-nav-data && GATSBY_ACTIVE_ENV=staging gatsby build --prefix-paths",
     "build-prod": "yarn build-nav-data && GATSBY_ACTIVE_ENV=production gatsby build",
     "build-deploy-prod": "yarn build-prod && gatsby-plugin-s3 deploy --yes",
+    "build-release": "yarn build-nav-data && GATSBY_ACTIVE_ENV=release gatsby build",
     "prettier": "prettier --write \"**/*.{js,ts,tsx,json,yml}\"",
     "prettierf": "prettier",
     "build-staging-watch": "onchange '**/*.mdx' '**/*.json' -- yarn build-staging",
